# veloryn-xray

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
.github/workflows/: sdk-package.yml
cli/: __init__.py  main.py
docs/: architecture.md  crewai_callback.md  determinism.md  engine_flow.md  execution_validity.md  failsafe_contract.md  invariants.md  langchain_callback.md  limitations.md  philosophy.md  sdk_contract.md  testing.md  versioning.md
examples/: README.md
examples/claude_refinement/: README.md  claude_refinement.py  claude_refinement_live_raw.json  claude_refinement_trace.json  generate_claude_example_trace.py  verify_claude_example.py
examples/crewai_callback/: README.md  callback_example.py  callback_trace.json  xray_analysis.txt
examples/crewai_official/: README.md
examples/fail_safe/: README.md  unrelated_fragments.json  unrelated_fragments.py
examples/iterative_refinement/: README.md  generate_iterative_refinement_trace.py  iterative_refinement.py  iterative_refinement_live_raw.json  iterative_refinement_trace.json  verify_iterative_refinement_example.py
examples/langchain/: README.md  langchain_real_example.py  langchain_trace.json
examples/langchain_callback/: README.md  callback_example.py  callback_trace.json  xray_analysis.txt
pattern_extractor/: __init__.py  classifier.py  extractor.py  features.py  rf_token.py  validator.py  verdict.py
src/: App.jsx  main.jsx
tests/: test_rf_token_v1.py  test_sdk.py
ui_adapter/: analyze.py
veloryn/: __init__.py
(+59 files in other folders)
