[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veloryn-xray"
version = "0.1.0"
description = "Deterministic lexical execution analysis for multi-step LLM workflows."
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Veloryn Intelligence" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "tiktoken",
]

[project.optional-dependencies]
langchain = [
    "langchain-core",
    "langchain-openai",
]
crewai = [
    "crewai",
]

[project.scripts]
xray = "veloryn.xray.cli:main"

[project.urls]
Homepage = "https://github.com/veloryn-intel/veloryn-xray"
Source = "https://github.com/veloryn-intel/veloryn-xray"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["veloryn*", "pattern_extractor", "cli"]
